# superligaen

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: bronze.yml  ci.yml  dq.yml  gold.yml  master.yml  silver.yml
_archive/api-football/: config.py  db.py
_archive/dbt/: dbt_project.yml  package-lock.yml  profiles.yml
archive/api-football/: ingest_fixtures.py  requirements.txt
dashboards/: package.json
dashboards/components/: InstallBanner.svelte  MatchLineup.svelte  RadarChart.svelte  TeamRadar.svelte
dashboards/pages/: +layout.svelte  about.md  glossary.md  index.md  league-analytics.md  match-results.md  player-analytics.md  player-stats.md  referee-analytics.md  stadium-analytics.md  standings.md  team-analytics.md  upcoming-matches.md
dashboards/static/: manifest.webmanifest  service-worker.js
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: cleanup_dbt_backup.sql  gold_incremental_filter.sql
dbt/seeds/: referee_id_overrides.csv  team_names.csv
ingestion/: INGESTION_SCOPE.md  ingest_fixtures.py
ingestion/_archive/: ingest_country.py  ingest_leagues.py  ingest_season.py  run.py
ingestion/sportmonks/: api.py  config.py  db.py  engine.py  ingest.py  ingest_fixtures.py  ingest_h2h.py  ingest_league.py  ingest_rivals.py  ingest_round_statistics.py  ingest_seasons.py  ingest_squads.py  ingest_stage_statistics.py  ingest_stages.py  ingest_standings.py  ingest_static.py  ingest_topscorers.py  ingest_transfers.py  ingest_types.py  loaders.py  run.py
scripts/: pull_from_prod.py  push_to_prod.py
(+128 files in other folders)
